--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,1 @@
-{"name":"Wikimedian's Group of Mainland China blog","short_name":"WMGMC blog","start_url":"www.wmgmc.org","theme_color":null,"background_color":null,"display":"standalone","icons":[{"src":"","sizes":"","type":null}]}
+{"name":"WMGMC blog","start_url":"/index.html"}
